Fix the misaligned prize button

--- a/hackerstash/static/scss/pages/_leaderboard.scss
+++ b/hackerstash/static/scss/pages/_leaderboard.scss
@@ -15,6 +15,10 @@
     overflow: visible;
     text-align: end;
     text-overflow: clip;
+
+    @include tablet-down {
+      text-align: left;
+    }
   }
 
   .score {
